--- a/project1/webapp/view/TilePage.view.xml
+++ b/project1/webapp/view/TilePage.view.xml
@@ -36,7 +36,7 @@
                     <ux:ObjectPageSection
                         id="id_Sectiontile"
                         titleUppercase="false"
-                        title="Home"
+                        title=""
                         visible="{= ${TileAccessModel>/Home} === '1' ? true : false}"
                     >
                         <ux:subSections>
